# job-scraper-project

./: .dockerignore  .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/api/: analytics_routes.py  auth_routes.py  health.py  jobs_routes.py  scraper_routes.py
app/core/: database.py  security.py
app/models/: job.py
app/scraper/: extractor.py  remoteok.py
app/services/: normalizer.py  repository.py
